[incubator-kie-issues-1924] Data Audit stores subprocess events always in completed state (#3908)